--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^1.0.0",
+    "@nuxtjs/tailwindcss": "^3.3.3",
     "@vue/test-utils": "^1.0.0-beta.27",
+    "autoprefixer": "^9.8.6",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue-jest": "^4.0.0-0"
   }
 }
